--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,67 @@
-*.pyc
 .pio/
 .vscode/
+__pycache__/
+settings
+Debug
+*.py[cod]
+*$py.class
+*__pyc*/
+*.DS_Store
+*.autosave
+*~
+*#
+Change*
+CHANGE*
+README*
+COPY*
+*CONTRIBU*
+LICENSE*
+HACKING*
+*.swp
+*.lck
+*.log
+*.ewt
+*.ewd
+*.crf
+*.dep
+*.map
+*.hex
+*.bin
+*bak
+*.txt
+*.lst
+*.sct
+*.elf
+*.ini
+*.gbr
+*.drl
+*.ods
+*.odg
+*.csv
+*.xml
+*.xlsx
+*.zip
+*.xcf
+*_sc*
+*cm23*
+*cm33*
+*cm3*
+keilkilll.bat
+# *cm4*
+# *cm7*
+*cm1*
+*cm0*
+*.uvgu*
+.gitmodules
+# *.png
+# *.jpg
+*.rst
+.travis.yml
+doc
+*dox
+tests
+# mk
+Doxyfile
+**/*/README*
+*.so
+*.dcm
