--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,12 @@ Debug
 *#
 Change*
 CHANGE*
-README*
+# README*
 COPY*
 *CONTRIBU*
 LICENSE*
 HACKING*
+Doxyfile
 *.swp
 *.lck
 *.log
@@ -28,40 +29,3 @@ HACKING*
 *.hex
 *.bin
 *bak
-*.txt
-*.lst
-*.sct
-*.elf
-*.ini
-*.gbr
-*.drl
-*.ods
-*.odg
-*.csv
-*.xml
-*.xlsx
-*.zip
-*.xcf
-*_sc*
-*cm23*
-*cm33*
-*cm3*
-keilkilll.bat
-# *cm4*
-# *cm7*
-*cm1*
-*cm0*
-*.uvgu*
-.gitmodules
-# *.png
-# *.jpg
-*.rst
-.travis.yml
-doc
-*dox
-tests
-# mk
-Doxyfile
-**/*/README*
-*.so
-*.dcm
